Saved Stuffs at previous .py files

--- a/practicing/secondClass.ipynb
+++ b/practicing/secondClass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 202,
    "id": "a1bbfe43",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 203,
    "id": "179db921",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 204,
    "id": "b4d13c59",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "(627, 9)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 205,
    "id": "6d7a9ba1",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 206,
    "id": "f4a376c1",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "<Axes: ylabel='sex'>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 207,
    "id": "48e1b71e",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "<Axes: ylabel='class'>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 208,
    "id": "5c0b2d6c",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
        "Text(0.5, 0, '% survive/100')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 209,
    "id": "cd14ec61",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 210,
    "id": "a794bb43",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 211,
    "id": "40fccc91",
    "metadata": {},
    "outputs": [
@@ -313,8 +313,8 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Using default config.\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmp77_6wccb\n",
-      "INFO:tensorflow:Using config: {'_model_dir': 'C:\\\\Users\\\\Eduardo\\\\AppData\\\\Local\\\\Temp\\\\tmp77_6wccb', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': allow_soft_placement: true\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmphmn3x824\n",
+      "INFO:tensorflow:Using config: {'_model_dir': 'C:\\\\Users\\\\Eduardo\\\\AppData\\\\Local\\\\Temp\\\\tmphmn3x824', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': allow_soft_placement: true\n",
       "graph_options {\n",
       "  rewrite_options {\n",
       "    meta_optimizer_iterations: ONE\n",
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 212,
    "id": "31afbd9f",
    "metadata": {},
    "outputs": [
@@ -343,30 +343,30 @@
       "INFO:tensorflow:Done calling model_fn.\n",
       "INFO:tensorflow:Create CheckpointSaverHook.\n",
       "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Restoring parameters from C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmp77_6wccb\\model.ckpt-41200\n",
+      "INFO:tensorflow:Restoring parameters from C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmphmn3x824\\model.ckpt-200\n",
       "INFO:tensorflow:Running local_init_op.\n",
       "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Calling checkpoint listeners before saving checkpoint 41200...\n",
-      "INFO:tensorflow:Saving checkpoints for 41200 into C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmp77_6wccb\\model.ckpt.\n",
-      "INFO:tensorflow:Calling checkpoint listeners after saving checkpoint 41200...\n",
-      "INFO:tensorflow:loss = 0.5135168, step = 41200\n",
-      "INFO:tensorflow:global_step/sec: 600.469\n",
-      "INFO:tensorflow:loss = 0.31687596, step = 41300 (0.167 sec)\n",
-      "INFO:tensorflow:Calling checkpoint listeners before saving checkpoint 41400...\n",
-      "INFO:tensorflow:Saving checkpoints for 41400 into C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmp77_6wccb\\model.ckpt.\n",
-      "INFO:tensorflow:Calling checkpoint listeners after saving checkpoint 41400...\n",
-      "INFO:tensorflow:Loss for final step: 0.45396018.\n",
+      "INFO:tensorflow:Calling checkpoint listeners before saving checkpoint 200...\n",
+      "INFO:tensorflow:Saving checkpoints for 200 into C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmphmn3x824\\model.ckpt.\n",
+      "INFO:tensorflow:Calling checkpoint listeners after saving checkpoint 200...\n",
+      "INFO:tensorflow:loss = 0.38435447, step = 200\n",
+      "INFO:tensorflow:global_step/sec: 669.459\n",
+      "INFO:tensorflow:loss = 0.53921676, step = 300 (0.149 sec)\n",
+      "INFO:tensorflow:Calling checkpoint listeners before saving checkpoint 400...\n",
+      "INFO:tensorflow:Saving checkpoints for 400 into C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmphmn3x824\\model.ckpt.\n",
+      "INFO:tensorflow:Calling checkpoint listeners after saving checkpoint 400...\n",
+      "INFO:tensorflow:Loss for final step: 0.2674394.\n",
       "INFO:tensorflow:Calling model_fn.\n",
       "INFO:tensorflow:Done calling model_fn.\n",
-      "INFO:tensorflow:Starting evaluation at 2025-07-16T20:07:53\n",
+      "INFO:tensorflow:Starting evaluation at 2025-07-16T21:32:09\n",
       "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Restoring parameters from C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmp77_6wccb\\model.ckpt-41400\n",
+      "INFO:tensorflow:Restoring parameters from C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmphmn3x824\\model.ckpt-400\n",
       "INFO:tensorflow:Running local_init_op.\n",
       "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Inference Time : 0.32860s\n",
-      "INFO:tensorflow:Finished evaluation at 2025-07-16-20:07:53\n",
-      "INFO:tensorflow:Saving dict for global step 41400: accuracy = 0.780303, accuracy_baseline = 0.625, auc = 0.83872056, auc_precision_recall = 0.77659297, average_loss = 0.46919975, global_step = 41400, label/mean = 0.375, loss = 0.44977224, precision = 0.69902915, prediction/mean = 0.3989608, recall = 0.72727275\n",
-      "INFO:tensorflow:Saving 'checkpoint_path' summary for global step 41400: C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmp77_6wccb\\model.ckpt-41400\n"
+      "INFO:tensorflow:Inference Time : 0.33594s\n",
+      "INFO:tensorflow:Finished evaluation at 2025-07-16-21:32:09\n",
+      "INFO:tensorflow:Saving dict for global step 400: accuracy = 0.7537879, accuracy_baseline = 0.625, auc = 0.83501685, auc_precision_recall = 0.78496903, average_loss = 0.48624402, global_step = 400, label/mean = 0.375, loss = 0.4752852, precision = 0.6465517, prediction/mean = 0.43173563, recall = 0.75757575\n",
+      "INFO:tensorflow:Saving 'checkpoint_path' summary for global step 400: C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmphmn3x824\\model.ckpt-400\n"
      ]
     }
    ],
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 213,
    "id": "bac3fa18",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.780303\n"
+      "0.7537879\n"
      ]
     }
    ],
@@ -402,7 +402,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 214,
+   "id": "7690c2c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "264\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(evaluationDataFrame))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
    "id": "e65de0b7",
    "metadata": {},
    "outputs": [
@@ -413,7 +431,7 @@
       "INFO:tensorflow:Calling model_fn.\n",
       "INFO:tensorflow:Done calling model_fn.\n",
       "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Restoring parameters from C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmp77_6wccb\\model.ckpt-41400\n",
+      "INFO:tensorflow:Restoring parameters from C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmphmn3x824\\model.ckpt-400\n",
       "INFO:tensorflow:Running local_init_op.\n",
       "INFO:tensorflow:Done running local_init_op.\n",
       "sex                          male\n",
@@ -427,7 +445,7 @@
       "alone                           y\n",
       "Name: 7, dtype: object\n",
       "Status: Dead\n",
-      "Chances of surviving: 0.11189198\n",
+      "Chances of surviving: 0.11714732\n",
       "0      0\n",
       "1      0\n",
       "2      1\n",
@@ -449,13 +467,228 @@
     "print(evaluationDataFrame.loc[personIndex])\n",
     "print(\"Status: Dead\" if y_evaluation.loc[personIndex] == 0 else \"Status: Alive\")\n",
     "print(\"Chances of surviving: \" + str(result[personIndex]['probabilities'][1]))\n",
-    "print(y_evaluation)"
+    "print(y_evaluation)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "d829e86c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>n_siblings_spouses</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>class</th>\n",
+       "      <th>deck</th>\n",
+       "      <th>embark_town</th>\n",
+       "      <th>alone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>male</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51.8625</td>\n",
+       "      <td>First</td>\n",
+       "      <td>E</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>female</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.5500</td>\n",
+       "      <td>First</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>female</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.0000</td>\n",
+       "      <td>Second</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>male</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13.0000</td>\n",
+       "      <td>Second</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td>female</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26.0000</td>\n",
+       "      <td>Second</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260</th>\n",
+       "      <td>male</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.8958</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>female</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>29.1250</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>Queenstown</td>\n",
+       "      <td>n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>male</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13.0000</td>\n",
+       "      <td>Second</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>male</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>First</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "      <td>y</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>264 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        sex   age  n_siblings_spouses  parch     fare   class     deck  \\\n",
+       "0      male  35.0                   0      0   8.0500   Third  unknown   \n",
+       "1      male  54.0                   0      0  51.8625   First        E   \n",
+       "2    female  58.0                   0      0  26.5500   First        C   \n",
+       "3    female  55.0                   0      0  16.0000  Second  unknown   \n",
+       "4      male  34.0                   0      0  13.0000  Second        D   \n",
+       "..      ...   ...                 ...    ...      ...     ...      ...   \n",
+       "259  female  25.0                   0      1  26.0000  Second  unknown   \n",
+       "260    male  33.0                   0      0   7.8958   Third  unknown   \n",
+       "261  female  39.0                   0      5  29.1250   Third  unknown   \n",
+       "262    male  27.0                   0      0  13.0000  Second  unknown   \n",
+       "263    male  26.0                   0      0  30.0000   First        C   \n",
+       "\n",
+       "     embark_town alone  \n",
+       "0    Southampton     y  \n",
+       "1    Southampton     y  \n",
+       "2    Southampton     y  \n",
+       "3    Southampton     y  \n",
+       "4    Southampton     y  \n",
+       "..           ...   ...  \n",
+       "259  Southampton     n  \n",
+       "260  Southampton     y  \n",
+       "261   Queenstown     n  \n",
+       "262  Southampton     y  \n",
+       "263    Cherbourg     y  \n",
+       "\n",
+       "[264 rows x 9 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(evaluationDataFrame)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
