--- a/practicing/thirdClass.ipynb
+++ b/practicing/thirdClass.ipynb
@@ -7,6 +7,7 @@
    "source": [
     "# Purpose:\n",
     "-> To create another AI model, now, more complex. Content explained on the previous notebook will not be covered here.\n",
+    "Topic: Classification\n",
     "\n",
     "About the used Data: I have imported them from the Keras, it has a lot of data about flowers. They are not pictures, they are just numeric information. At the end, my model will be able to identify the Specie of the flower."
    ]
@@ -754,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "89b4fb03",
    "metadata": {},
    "outputs": [
@@ -763,28 +764,12 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Calling model_fn.\n",
-      "WARNING:tensorflow:From c:\\Users\\Eduardo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tensorflow_estimator\\python\\estimator\\head\\base_head.py:786: ClassificationOutput.__init__ (from tensorflow.python.saved_model.model_utils.export_output) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.keras instead.\n",
-      "WARNING:tensorflow:From c:\\Users\\Eduardo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tensorflow_estimator\\python\\estimator\\head\\multi_class_head.py:455: PredictOutput.__init__ (from tensorflow.python.saved_model.model_utils.export_output) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.keras instead.\n",
       "INFO:tensorflow:Done calling model_fn.\n",
       "INFO:tensorflow:Graph was finalized.\n",
       "INFO:tensorflow:Restoring parameters from C:\\Users\\Eduardo\\AppData\\Local\\Temp\\tmp84c6jdxk\\model.ckpt-5000\n",
       "INFO:tensorflow:Running local_init_op.\n",
-      "INFO:tensorflow:Done running local_init_op.\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'Class_ids'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     12\u001b[39m predictions = classifier.predict(input_fn=\u001b[38;5;28;01mlambda\u001b[39;00m: input_pred_fn(predict))\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m pred_dict \u001b[38;5;129;01min\u001b[39;00m predictions:\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m     class_id = \u001b[43mpred_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mClass_ids\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[32m0\u001b[39m]\n\u001b[32m     15\u001b[39m     probability = pred_dict[\u001b[33m'\u001b[39m\u001b[33mprobabilities\u001b[39m\u001b[33m'\u001b[39m][class_id]\n\u001b[32m     17\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mPrediction is \u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[33m\"\u001b[39m\u001b[33m (\u001b[39m\u001b[38;5;132;01m{:.1f}\u001b[39;00m\u001b[33m%\u001b[39m\u001b[33m)\u001b[39m\u001b[33m'\u001b[39m.format(\n\u001b[32m     18\u001b[39m         SPECIES[class_id], \u001b[32m100\u001b[39m * probability))\n",
-      "\u001b[31mKeyError\u001b[39m: 'Class_ids'"
+      "INFO:tensorflow:Done running local_init_op.\n",
+      "\u001b[32mPrediction is \"Setosa\" (74.1%)\u001b[32m\n"
      ]
     }
    ],
@@ -805,7 +790,7 @@
     "    class_id = pred_dict['class_ids'][0]\n",
     "    probability = pred_dict['probabilities'][class_id]\n",
     "\n",
-    "    print('Prediction is \"{}\" ({:.1f}%)'.format(\n",
+    "    print('\\033[32mPrediction is \"{}\" ({:.1f}%)\\033[32m'.format(\n",
     "        SPECIES[class_id], 100 * probability))\n",
     "\n"
    ]
