--- a/practicing/fifthClass.ipynb
+++ b/practicing/fifthClass.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "40ff0f8e",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "id": "3df3557c",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "id": "a5aeeafb",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "id": "745a0d8c",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "id": "63cc7811",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "id": "02e62aac",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "id": "afe4b0d2",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "id": "abdccf8e",
    "metadata": {},
    "outputs": [
@@ -137,18 +137,18 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.1908 - accuracy: 0.9283\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.4983 - accuracy: 0.8252\n",
       "Epoch 2/2\n",
-      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.1850 - accuracy: 0.9309\n"
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.3732 - accuracy: 0.8650\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x1f09a5fe010>"
+       "<keras.src.callbacks.History at 0x1feb1b23190>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "id": "ed697c5e",
    "metadata": {},
    "outputs": [
@@ -167,8 +167,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 0s 762us/step - loss: 0.3674 - accuracy: 0.8872\n",
-      "Test Accuracy:  88.71999979019165\n"
+      "313/313 [==============================] - 0s 794us/step - loss: 0.3988 - accuracy: 0.8590\n",
+      "Test Accuracy:  85.9000027179718\n"
      ]
     }
    ],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "id": "319d1241",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 0s 762us/step\n"
+      "313/313 [==============================] - 0s 692us/step\n"
      ]
     },
     {
